src/test/resources/public/input/typechecking/pass/passReturn07.jova
class Helper {

}

class A {
  public Helper func() {
    return nix;
  }
}
