src/test/resources/public/input/typechecking/fail/main_structure/fail07.jova
class Main {
}

class Main {
  public string main() {
    return 0;
  }
}